Add docker wrapper CLI and usage docs

--- a/gitbook_worker/pyproject.toml
+++ b/gitbook_worker/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
 
 [project.scripts]
 gitbook-worker = "gitbook_worker.__main__:main"
+gitbook-worker-docker = "gitbook_worker.docker_cli:main"
 
 [tool.setuptools.package-data]
 "gitbook_worker" = ["landscape.lua"]
